<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_marginTop="19dp">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginStart="14dp"
            android:scaleType="fitXY"
            android:src="@drawable/kembali" />

        <TextView
            android:id="@+id/txt_file_title"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="56dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="14dp"
            android:text="profilku"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_marginBottom="34dp"
        android:layout_marginTop="97dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_marginLeft="10dp"
            android:layout_marginStart="34dp"
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:src="@drawable/profile_foto" />

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold"
                android:text="@string/app_nama"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#AE000000"
                android:text="@string/app_nik"
                android:layout_marginLeft="10dp"
                android:textSize="18sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#AE000000"
                android:text="@string/app_emai"
                android:layout_marginLeft="10dp"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="33dp"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="193dp"
            android:layout_marginStart="30dp"
            android:textColor="#AE000000"
            android:text="@string/artikel"
            android:textSize="22dp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            />

    <TextView
        android:elevation="5dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#43000000"
        />

    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="34dp"
        android:layout_marginTop="97dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="160dp"
            android:src="@drawable/baseline_mode" />

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#AE000000"
                android:layout_marginTop="155dp"
                android:text="@string/artikel1"
                android:textStyle="bold"
                android:layout_marginLeft="23dp"
                android:textSize="18sp"
                />

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_marginBottom="34dp"
        android:layout_marginTop="97dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"/>

    <ImageView
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="296dp"
        android:src="@drawable/baseline_delete_24" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="76dp"
            android:layout_marginTop="294dp"
            android:text="@string/artikel2"
            android:textColor="#AE000000"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>
    <LinearLayout
        android:layout_marginBottom="34dp"
        android:layout_marginTop="97dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"/>

    <ImageView
        android:layout_width="26dp"
        android:layout_height="27dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="338dp"
        android:src="@drawable/baseline_logout_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="76dp"
            android:layout_marginTop="340dp"
            android:text="@string/artikel3"
            android:layout_gravity="start|center_horizontal"
            android:textColor="#AE000000"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>