<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".views.profile.ProfileFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:layout_marginTop="19dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginStart="14dp"
                android:scaleType="fitXY"
                android:src="@drawable/kembali" />

            <TextView
                android:id="@+id/txt_file_title"
                android:layout_width="174dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="56dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="14dp"
                android:text="Profile"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:layout_marginBottom="34dp"
            android:layout_marginTop="97dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_marginLeft="10dp"
                android:layout_marginStart="34dp"
                android:layout_width="70dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_profile" />

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/app_nama"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/nik"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/app_nik"
                    android:textColor="#AE000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/app_emai"
                    android:textColor="#AE000000" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="33dp"
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="193dp"
                android:layout_marginStart="30dp"
                android:textColor="#AE000000"
                android:text="@string/artikel"
                android:textSize="22dp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                />

            <TextView
                android:elevation="5dp"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#43000000"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="34dp"
            android:layout_marginTop="97dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="31dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="160dp"
                android:src="@drawable/baseline_mode" />

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/toEditProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#AE000000"
                    android:layout_marginTop="155dp"
                    android:text="@string/artikel1"
                    android:textStyle="bold"
                    android:layout_marginLeft="23dp"
                    android:textSize="18sp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:orientation="horizontal"
            android:layout_marginTop="300dp"
            tools:ignore="NotSibling">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="27dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/baseline_logout_24" />
                <LinearLayout
                    android:id="@+id/logout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_horizontal"
                        android:layout_marginLeft="22dp"
                        android:text="@string/artikel3"
                        android:textColor="#AE000000"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

</RelativeLayout>
